Chore: Sonarr upstream sync batch17 (#1044)
